// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<InputToggle /> > Controlled story renders snapshot 1`] = `
<span
  class="MuiSwitch-root MuiSwitch-sizeMedium efvmhqy0 css-ubl7ld-MuiSwitch-root-Toggle"
>
  <span
    class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked Mui-checked css-aqlqb4-MuiButtonBase-root-MuiSwitchBase-root-MuiSwitch-switchBase"
  >
    <input
      checked=""
      class="PrivateSwitchBase-input MuiSwitch-input css-12xagqm-MuiSwitchBase-root"
      role="switch"
      type="checkbox"
      value="On"
    />
    <span
      class="MuiSwitch-thumb css-1mw77bv-MuiSwitch-thumb"
    />
  </span>
  <span
    class="MuiSwitch-track css-1kf3qur-MuiSwitch-track"
  />
</span>
`;

exports[`<InputToggle /> > Default story renders snapshot 1`] = `
<span
  class="MuiSwitch-root MuiSwitch-sizeMedium efvmhqy0 css-1eqodmj-MuiSwitch-root-Toggle"
>
  <span
    class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary css-aqlqb4-MuiButtonBase-root-MuiSwitchBase-root-MuiSwitch-switchBase"
    width="62"
  >
    <input
      class="PrivateSwitchBase-input MuiSwitch-input css-12xagqm-MuiSwitchBase-root"
      role="switch"
      type="checkbox"
      value="Off"
    />
    <span
      class="MuiSwitch-thumb css-1mw77bv-MuiSwitch-thumb"
    />
  </span>
  <span
    class="MuiSwitch-track css-1kf3qur-MuiSwitch-track"
  />
</span>
`;
